--- a/functions/package.json
+++ b/functions/package.json
@@ -10,11 +10,14 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "cors": "^2.8.5",
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "3.7.0",
+    "nodemailer": "^6.4.10",
+    "request": "^2.88.0"    
   },
   "devDependencies": {
     "eslint": "^5.12.0",
