send confirmation email on firestore trigger

--- a/firebase.json
+++ b/firebase.json
@@ -33,6 +33,9 @@
     "rules": "storage.rules"
   },
   "emulators": {
+    "firestore": {
+      "port": "4000"
+    },
     "functions": {
       "port": null
     },
